--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,6 +34,39 @@ body {
     height: 3rem;
 }
 
+.align-el-under-input {
+    margin-left:42px !important;
+}
+
+i.icon-left-in-input {
+    margin-left: 40px;
+}
+
+input.icon-left-in-input {
+    padding-left: 40px;
+}
+
 .input-field>input {
     border-radius: 2px !important;
+}
+
+.grey.normalize {
+    background-color: #efefef
+}
+
+.ignore-padding-left {
+    padding-left: 0px !important;
+}
+
+.ignore-padding-right {
+    padding-right: 0px !important;
+}
+
+.med-vertical-padding {
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+}
+
+.prefix-active {
+    color: red !important;
 }
