--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,9 +2,14 @@ body {
     background-color: #efefef;
 }
 .main-banner {
-    background: url("/assets/img/main-banner3-darken.jpg") no-repeat;
+    background: url("/assets/img/landing-banner.jpg") no-repeat;
     height:75vh;
     background-size: cover;
+    background-position: center;
+}
+
+.transparent {
+    background-color: rgba(0, 0, 0, 0.3) !important;
 }
 
 .search-bar {
@@ -55,11 +60,11 @@ input.icon-left-in-input {
 }
 
 .ignore-padding-left {
-    padding-left: 0px !important;
+    padding-left: 0 !important;
 }
 
 .ignore-padding-right {
-    padding-right: 0px !important;
+    padding-right: 0 !important;
 }
 
 .med-vertical-padding {
@@ -69,4 +74,19 @@ input.icon-left-in-input {
 
 .prefix-active {
     color: red !important;
+}
+
+/* User bar */
+ul #profile-dropdown {
+    top: 65.5px !important;
+}
+
+#username-text {
+    margin-left: 10px !important;
+}
+
+.avatar {
+    width: 32px !important;
+    height: 32px !important;
+    margin: -8px auto !important;
 }
